--- a/index.html
+++ b/index.html
@@ -5,14 +5,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Brand</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"> -->
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/elementor.css">
-    <link rel="stylesheet" href="assets/css/smoothproducts.css">
+    <link rel="preload" href="assets/bootstrap/css/bootstrap.min.css" as="style">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" media="print" onload="this.media='all'">
+
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i" as="style">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i" media="print" onload="this.media='all'">
+
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" as="style">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" media="print" onload="this.media='all'">
+
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" as="style">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" media="print" onload="this.media='all'">
+
+    <link rel="preload" href="assets/css/elementor.css" as="style">
+    <link rel="stylesheet" href="assets/css/elementor.css" media="print" onload="this.media='all'">
+
+    <link rel="preload" href="assets/css/smoothproducts.css" as="style">
+    <link rel="stylesheet" href="assets/css/smoothproducts.css" media="print" onload="this.media='all'">
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
