Make main css blocking to make sure layout currectness

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"> -->
 
     <link rel="preload" href="assets/bootstrap/css/bootstrap.min.css" as="style">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" media="print" onload="this.media='all'">
+    <!-- <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" media="print" onload="this.media='all'"> -->
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i" as="style">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i" media="print" onload="this.media='all'">
